2002-10-23 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadCmd.c: added handling of background errors
	while doing an async callback. 

2002-10-20 Zoran Vasiljevic <zoran@archiware.com>

	* doc/html/thread.html
	* doc/man/thread.n
	* doc/thread.tmml: fixed "thread::send" command summary.
	It was showing the wrong position of the "-async" argument.

	* generic/threadCmd.c: added thread::eval command.
	See documentation for syntax and usage.

	* generic/threadSpCmd.c: adjusted mutex/cond handles to
	use the same format and handling as AOLserver counterparts
	when compiled for AOLserver support. This way one can mix
	and match primitives declared with ns_mutex and thread::mutex
	and/or ns_event and thread::cond commands.

2002-10-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure:
	* configure.in: move the CFLAGS definition into TEA_ENABLE_SHARED
	and make it pick up the env CFLAGS at configure time.

2002-08-23 Zoran Vasiljevic <zoran@archiware.com>

	* threadCmd.c: fixed potential memory corruption
	when releasing preserved interpreter.
	[Tcl bug 599290]

2002-08-19 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadSvCmd.c: we now properly invalidate
	duped object string rep if the internal rep has been
	regenerated.

2002-08-18 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadCmd.c: updated some comments
	* generic/threadSvCmd.c:
	* generic/threadSvListCmd.c: fixed silly mem leak
	where we were registering commands and object types
	for each new thread, resulting in unnecessary table
	grow. Not a memory leak per-se, therefore not found
	by Purify, but shows itself by observing the size
	of the process using the top utility. Gosh!

2002-08-03  Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadSvListCmd.c: corrected "tsv::lpush"
	to correctly make a copy of the object pushed into
	the list in shared array element.

2002-07-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* README: Fix typo.